# EUDI-Matrix-PoC

./: .gitignore  README.md
docs/: auth-flow.md
services/: README.md
services/poc/: .gitignore  README.md  docker-compose.homeservers.yml  docker-compose.phonebook.yml  docker-compose.traefik.yml
services/poc/configs/shared/demo-frontpage/: index.html
services/poc/configs/shared/element/: config.json
services/poc/configs/shared/federation-tls/: nginx.conf
services/poc/configs/shared/postgres/: init-databases.sh
services/poc/configs/shared/synapse/: homeserver.yaml
services/poc/configs/shared/traefik/: dynamic.yml  traefik.yml
services/scripts/: README.md  generate-configs.sh  generate-mkcert.sh  generate-wallet-keys.sh  start.sh  teardown.sh
src/element-web-patched/: Dockerfile  README.md  invite-phone-lookup.patch
src/mock-wallet/: README.md  carrier.py  credential.py  pyproject.toml  test_roundtrip.py  wallet.py
src/phonebook/: Dockerfile  README.md  app.py  pyproject.toml
src/provisioning-agent/: .dockerignore  Dockerfile  README.md  app.py  oidc_provider.py  openid4vp.py  provisioning.py  pyproject.toml  store.py  vp_verifier.py
